--- a/CSharp_1/ConsoleInputAndOutput/06.QuadraticEquation/06.QuadraticEquation.csproj
+++ b/CSharp_1/ConsoleInputAndOutput/06.QuadraticEquation/06.QuadraticEquation.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{A3A9BBE5-F2D0-4BAF-8953-953BBDE18B73}</ProjectGuid>
+    <ProjectGuid>{2B51DC42-91E5-4127-88E3-9CD9402D269E}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>_04.NumberComparer</RootNamespace>
-    <AssemblyName>04.NumberComparer</AssemblyName>
+    <RootNamespace>_06.QuadraticEquation</RootNamespace>
+    <AssemblyName>06.QuadraticEquation</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -43,7 +43,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="NumberComparer.cs" />
+    <Compile Include="QuadraticEquation.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
